[package]
name = "citybuilder"
version = "0.1.0"
edition = "2021"

[build]
rustc-wrapper = "C:/Users/mcgel/.cargo/bin/sccache.exe"

[dependencies]
alsa = "0.9.1"
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy_dylib = "0.16.0"
rand = "0.9.1"
rstar = "0.12.2"
noise = "0.8"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
